# deadbeef-gvfs

./: .gitignore  INSTALL  LICENSE  Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  deadbeef-gvfs.c
